# aiteacher

./: .gitignore  auth.ts  biome.json  next.config.ts  package-lock.json  package.json  prisma.config.ts  tsconfig.json
prisma/: schema.prisma
prisma/migrations/20251207054353_create_auth_code_table/: migration.sql
prisma/migrations/20251207055426_remove_auth_code_table/: migration.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  hero.ts  layout.tsx  page.tsx  server.tsx
src/app/(app)/: layout.tsx
src/app/(app)/app/: page.tsx
src/app/(app)/app/[subject]/: page.tsx
src/app/api/auth/[...all]/: route.ts
src/app/api/auth/send-auth-link/: route.ts
src/app/api/auth/verify-auth-link/: route.ts
src/app/api/gemini/: route.ts
src/app/components/: BodyTouchListener.tsx  TopProgress.tsx
src/app/components/layout/: header.tsx  sidebar.tsx
src/components/layout/: header.tsx  sidebar.tsx
src/components/ui/: Input.tsx  InputTips.tsx  index.ts
src/emails/: AuthLinkEmail.tsx
src/features/auth/components/: auth-modal.tsx  signIn.tsx  signUp.tsx
src/hooks/: useChatDisplay.ts  useChatLogic.ts  useChatSettings.ts  useImageUpload.ts  useTextInput.ts
src/lib/: auth-client.ts  auth.ts  prisma.ts
src/stores/: header.tsx  useAuth.ts  useChat.ts  useChatStore.ts
src/types/: chat.ts
src/utils/: chat.ts  cn.ts
