[package]
name = "AITeacher"
version = "1.2.6"
description = "A Tauri App"
authors = ["FoCalrina"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# --- 基本ユーティリティ ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# --- Tauri本体 ---
tauri = { version = "2.9.2", features = [] }

# --- Tauri プラグイン群 ---
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-http = "2.5.4"

# --- 非同期処理 / 通信 ---
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# --- ユーティリティ ---
base64 = "0.22"
dotenvy = "0.15.7"
